add check version of extesion